--- a/publications.html
+++ b/publications.html
@@ -42,10 +42,11 @@
 						<div class="features">
 							<section>
 								<p align="justify"> 
-									1.	M. A. Rahman, M. R. Karim, and M. M. Ehsan, <i><a href="https://www.sciencedirect.com/science/article/pii/S2590123023005881"> “Solar energy harvesting from evacuated flat plate collector: Design, thermo-economic analysis, and off design performance,”</a> </i>Results Eng., vol. 20, p. 101461, Dec. 2023, doi: 10.1016/j.rineng.2023.101461.
-									<br><br>2.	M. A. Rahman, Shoieb, R. R. M. Salahuddin, S. Salehin, and M. R. Karim, <i><a href= "https://www.sciencedirect.com/science/article/pii/S266620272300174X">“Techno-economic and environmental feasibility analysis of solar industrial process heating systems in textile industries of Bangladesh,”</a></i> Int. J. Thermofluids, vol. 20, p. 100459, Nov. 2023, doi: 10.1016/j.ijft.2023.100459.
-									<br><br>3.	M. A. A. Bhuiyan, M. H. Bhuiyan, M. A. Rahman, M. A. Abir, N. Mehfuz, and S. Salehin, <i><a href="https://ieeexplore.ieee.org/abstract/document/9230846">“Economic Assessment of Concrete and Floating Based Solar Chimney Power Plants in Bangladesh,”</a></i> in 2020 IEEE Region 10 Symposium (TENSYMP), 2020, pp. 638–641. doi: 10.1109/TENSYMP50017.2020.9230846.
-									
+									<ol>
+										<li>M. A. Rahman, M. R. Karim, and M. M. Ehsan, <i><a href="https://www.sciencedirect.com/science/article/pii/S2590123023005881"> “Solar energy harvesting from evacuated flat plate collector: Design, thermo-economic analysis, and off design performance,”</a> </i>Results Eng., vol. 20, p. 101461, Dec. 2023, doi: 10.1016/j.rineng.2023.101461.</li>
+										<li>M. A. Rahman, Shoieb, R. R. M. Salahuddin, S. Salehin, and M. R. Karim, <i><a href= "https://www.sciencedirect.com/science/article/pii/S266620272300174X">“Techno-economic and environmental feasibility analysis of solar industrial process heating systems in textile industries of Bangladesh,”</a></i> Int. J. Thermofluids, vol. 20, p. 100459, Nov. 2023, doi: 10.1016/j.ijft.2023.100459.</li>
+										<li>M. A. A. Bhuiyan, M. H. Bhuiyan, M. A. Rahman, M. A. Abir, N. Mehfuz, and S. Salehin, <i><a href="https://ieeexplore.ieee.org/abstract/document/9230846">“Economic Assessment of Concrete and Floating Based Solar Chimney Power Plants in Bangladesh,”</a></i> in 2020 IEEE Region 10 Symposium (TENSYMP), 2020, pp. 638–641. doi: 10.1109/TENSYMP50017.2020.9230846.</li>
+								</ol>
 								</p>
 							</section>
 					</div> 
